# support-bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  supervisord.conf
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: citations.py  config.py  logging_setup.py  main.py  orchestrator.py  rate_limit.py  uploads.py
app/db/: models.py  repository.py  session.py
app/llm/: litellm_client.py
app/retrieval/: chroma_client.py  query_expansion.py
app/routes/: admin.py  chat.py
app/tools/: __init__.py  registry.py
app/web_search/: base.py  noop.py  searxng.py
eval/: golden.yaml  runner.py
indexer/: __main__.py  chunker.py  embedder.py  git_source.py  runner.py  watermark.py
static/: styles.css
templates/: _message.html  base.html  chat.html  name_prompt.html
templates/admin/: conversation_detail.html  conversations.html  index.html  indexer_status.html
tests/: conftest.py
tests/fixtures/sample_repo/: README.md
tests/fixtures/sample_repo/security/: patching.md
tests/integration/: test_admin_auth.py  test_chat_routes.py  test_git_source.py  test_health.py  test_indexer_runner.py  test_orchestrator.py  test_rate_limit_route.py
tests/unit/: test_chroma_client.py  test_chunker.py  test_citations.py  test_config.py  test_embedder.py  test_eval_runner.py  test_litellm_client.py  test_query_expansion.py  test_rate_limit.py  test_repository.py  test_searxng_client.py  test_tool_registry.py  test_uploads.py  test_watermark.py  test_web_search_allowlist.py
