[project]
name = "support-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "sse-starlette>=2.1",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "aiosqlite>=0.20",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "chromadb>=0.5",
  "httpx>=0.27",
  "gitpython>=3.1",
  "markdown-it-py>=3.0",
  "structlog>=24.1",
  "pyyaml>=6.0",
  "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "freezegun>=1.5",
  "ruff>=0.5",
]

[tool.setuptools]
packages = ["app", "indexer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
